--- a/dummy/kubernetes/camer-edge-device/camera-edge-device-deployment.yaml
+++ b/dummy/kubernetes/camer-edge-device/camera-edge-device-deployment.yaml
@@ -40,6 +40,7 @@ spec:
             - name: WIDTH
               value: "100"
           image: ecobench/camera-edge-device:latest
+          imagePullPolicy: Always
           name: camera-edge-device
           ports:
             - containerPort: 5050
