--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -54,6 +54,7 @@ jobs:
   terraform:
     name: "Provision Environment"
     runs-on: ubuntu-latest
+    continue-on-error: true
     environment: production
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
