--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -222,12 +222,47 @@ jobs:
         working-directory: install-scripts/k3s-ansible
         run: ansible-playbook -i inventory/sample/inventory.ini site.yml
 
-  deploy-applications:
-    name: "Deploy Applications"
+  deploy-applications-k3s:
+    name: "Deploy Applications k3s"
     needs:
-      # - k3s
+      - k3s
+    runs-on: ubuntu-latest
+    environment: production
+
+    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+    defaults:
+      run:
+        shell: bash
+
+    steps:
+      # Checkout the repository to the GitHub Actions runner
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - uses: actions/download-artifact@master
+        with:
+          name: my-artifact
+          path: tmp
+
+      - run: cp tmp/inventory.ini install-scripts/k3s-ansible/
+
+      - run: cat install-scripts/k3s-ansible/inventory.ini
+
+      - name: create file with ssh key
+        run: |
+          mkdir ~/.ssh
+          touch ~/.ssh/id_rsa
+          echo '${{ secrets.PRIVATE_KEY }}' >> ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+
+      - name: run ansible playbook
+        working-directory: install-scripts/k3s-ansible/
+        run: ansible-playbook apply_applications.yml -i inventory.ini
+
+  deploy-applications-microk8s:
+    name: "Deploy Applications Microk8s"
+    needs:
       - mikrok8s
-      - mongodb
     runs-on: ubuntu-latest
     environment: production
 
@@ -264,7 +299,9 @@ jobs:
   run-benchmark:
     name: "Benchmark"
     needs:
-      - deploy-applications
+      - deploy-applications-k3s
+      - deploy-applications-microk8s
+      - mongodb
     runs-on: ubuntu-latest
     environment: production
 
