--- a/install-scripts/k3s-ansible/apply_applications.yml
+++ b/install-scripts/k3s-ansible/apply_applications.yml
@@ -1,4 +1,4 @@
-- hosts: cloud[0]:!k3s:!openyurt:!mongo
+- hosts: cloud[0]:!microk8s:!openyurt:!mongo
   tasks:
     - name: Git checkout
       become: true
@@ -7,12 +7,12 @@
         dest: /etc/eco-bench
     - name: apply all pods
       become: yes
-      shell: microk8s kubectl apply -f . --recursive
+      shell: kubectl apply -f . --recursive
       args:
         chdir: /etc/eco-bench/dummy/kubernetes
     - name: Wait for default pods become ready
       become: yes
-      shell: "microk8s kubectl wait --namespace=default --for=condition=Ready pods --timeout=600s --all"
+      shell: "kubectl wait --namespace=default --for=condition=Ready pods --timeout=600s --all"
       register: control_plane_pods_ready
       until: control_plane_pods_ready.rc == 0
       retries: 6
@@ -20,7 +20,7 @@
       ignore_errors: true
     - name: get all pods
       become: yes
-      shell: microk8s kubectl get pods -o wide
+      shell: kubectl get pods -o wide
       register: output
     - name: Print output
       debug:
