--- a/install-scripts/k3s-ansible/apply_applications.yml
+++ b/install-scripts/k3s-ansible/apply_applications.yml
@@ -1,6 +1,7 @@
 - hosts: cloud[0]:!microk8s:!openyurt:!mongo
   tasks:
     - name: install git
+      become: true
       apt:
         name: git
         state: present
