--- a/.github/workflows/sensor-edge-device.yml
+++ b/.github/workflows/sensor-edge-device.yml
@@ -1,4 +1,8 @@
-name: Build EdgeDevice Docker Image
+name: Build Sensor Device Image
+
+env:
+  REPOSITORY: ecobench
+  IMAGE_NAME: sensor-edge-device
 
 on:
   workflow_dispatch:
@@ -10,15 +14,10 @@ on:
       - dummy/sensor-edge-device/**
   # Run tests for any PRs.
   pull_request:
-
-env:
-  # TODO: Change variable to your image's name.
-  IMAGE_NAME: sensor-edge-device
-  REPOSITORY: ecobench
   
 defaults:
   run:
-    working-directory: dummy/sensor-edge-device/build
+    working-directory: dummy/sensor-edge-device
 
 jobs:
   # Push image to GitHub Packages.
@@ -31,9 +30,17 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
+      
+      - name: Set up JDK 1.14
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.14
+        
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+      
       - name: Build image
-        run: docker build ../ --file Dockerfile --tag ${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}
+        run: docker build . --tag ${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
