--- a/dummy/sensor-edge-device/src/main/resources/application.properties
+++ b/dummy/sensor-edge-device/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-DEVICE_TYPE=sensor
 WORKER_PORT=8080
-WORKER_IP=localhost
+WORKER_IP=
 WORKER_ENDPOINT=sensorData
 PING_INTERVAL=50
-server.port=8081
