--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -91,6 +91,13 @@ jobs:
           touch ~/.ssh/id_rsa.pub
           echo '${{ secrets.PUBLIC_KEY }}' >> ~/.ssh/id_rsa.pub
 
+      - name: Download cluster state artifact
+        uses: dawidd6/action-download-artifact@v2
+        with:
+          workflow: terraform.yml
+          name: my-artifact
+          path: ./install-scripts/provisioning
+
       # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
       - name: Terraform Init
         working-directory: ./install-scripts/provisioning
@@ -109,331 +116,331 @@ jobs:
           name: my-artifact
           path: ./install-scripts/provisioning
 
-  mongodb:
-    name: "Install MongoDB"
-    needs: terraform
-    runs-on: ubuntu-latest
-    environment: production
-
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
-    defaults:
-      run:
-        shell: bash
-
-    steps:
-      # Checkout the repository to the GitHub Actions runner
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - uses: actions/download-artifact@master
-        with:
-          name: my-artifact
-          path: tmp
-
-      - run: cat tmp/inventory.ini
-
-      - name: create file with ssh key
-        run: |
-          mkdir ~/.ssh
-          touch ~/.ssh/id_rsa
-          echo '${{ secrets.PRIVATE_KEY }}' >> ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-
-      - run: ansible-galaxy install undergreen.mongodb
-
-      - name: run ansible playbook
-        working-directory: ./benchmarking
-        run: ansible-playbook install_mongodb.yml -i ../tmp/inventory.ini
-
-  mikrok8s:
-    name: "Install MicroK8s"
-    needs: terraform
-    runs-on: ubuntu-latest
-    environment: production
-
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
-    defaults:
-      run:
-        shell: bash
-
-    steps:
-      # Checkout the repository to the GitHub Actions runner
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - uses: actions/download-artifact@master
-        with:
-          name: my-artifact
-          path: tmp
-
-      - run: cp tmp/inventory.ini install-scripts/microk8s/ansible/
-
-      - run: cat tmp/inventory.ini
-
-      - name: create file with ssh key
-        run: |
-          mkdir ~/.ssh
-          touch ~/.ssh/id_rsa
-          echo '${{ secrets.PRIVATE_KEY }}' >> ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-
-      - name: run ansible playbook
-        working-directory: install-scripts/microk8s/ansible
-        run: ansible-playbook cluster_install.yml -i inventory.ini
-
-  k3s:
-    name: "Install k3s"
-    needs: terraform
-    runs-on: ubuntu-latest
-    environment: production
-
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
-    defaults:
-      run:
-        shell: bash
-
-    steps:
-      # Checkout the repository to the GitHub Actions runner
-      - uses: actions/checkout@v2
-
-      - uses: actions/download-artifact@master
-        with:
-          name: my-artifact
-          path: tmp
-
-      - run: ls
-
-      - run: cat tmp/inventory.ini
-
-      - run: cp tmp/inventory.ini install-scripts/k3s-ansible/inventory/sample
-
-      - run: ls install-scripts/k3s-ansible/inventory/sample
-
-      - name: create file with ssh key
-        run: |
-          mkdir ~/.ssh
-          touch ~/.ssh/id_rsa
-          echo '${{ secrets.PRIVATE_KEY }}' >> ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-
-      - run: ls install-scripts/k3s-ansible
-
-      - name: run ansible playbook
-        working-directory: install-scripts/k3s-ansible
-        run: ansible-playbook -i inventory/sample/inventory.ini site.yml
-
-  deploy-applications-k3s:
-    name: "Deploy Applications k3s"
-    needs:
-      - k3s
-    runs-on: ubuntu-latest
-    environment: production
-
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
-    defaults:
-      run:
-        shell: bash
-
-    steps:
-      # Checkout the repository to the GitHub Actions runner
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - uses: actions/download-artifact@master
-        with:
-          name: my-artifact
-          path: tmp
-
-      - run: cp tmp/inventory.ini install-scripts/k3s-ansible/
-
-      - run: cat install-scripts/k3s-ansible/inventory.ini
-
-      - name: create file with ssh key
-        run: |
-          mkdir ~/.ssh
-          touch ~/.ssh/id_rsa
-          echo '${{ secrets.PRIVATE_KEY }}' >> ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-
-      - name: run ansible playbook
-        working-directory: install-scripts/k3s-ansible/
-        run: ansible-playbook apply_applications.yml -i inventory.ini
-
-  deploy-applications-microk8s:
-    name: "Deploy Applications Microk8s"
-    needs:
-      - mikrok8s
-    runs-on: ubuntu-latest
-    environment: production
-
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
-    defaults:
-      run:
-        shell: bash
-
-    steps:
-      # Checkout the repository to the GitHub Actions runner
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - uses: actions/download-artifact@master
-        with:
-          name: my-artifact
-          path: tmp
-
-      - run: cp tmp/inventory.ini install-scripts/microk8s/ansible/
-
-      - run: cat tmp/inventory.ini
-
-      - name: create file with ssh key
-        run: |
-          mkdir ~/.ssh
-          touch ~/.ssh/id_rsa
-          echo '${{ secrets.PRIVATE_KEY }}' >> ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-
-      - name: run ansible playbook
-        working-directory: install-scripts/microk8s/ansible
-        run: ansible-playbook apply_applications.yml -i inventory.ini
-
-  run-benchmark:
-    name: "Benchmark"
-    needs:
-      - deploy-applications-k3s
-      - deploy-applications-microk8s
-      - mongodb
-    runs-on: ubuntu-latest
-    environment: production
-
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
-    defaults:
-      run:
-        shell: bash
-
-    steps:
-      # Checkout the repository to the GitHub Actions runner
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - uses: actions/download-artifact@master
-        with:
-          name: my-artifact
-          path: tmp
-
-      - run: cp tmp/inventory.ini benchmarking/
-
-      - run: cat tmp/inventory.ini
-
-      - name: create file with ssh key
-        run: |
-          mkdir ~/.ssh
-          touch ~/.ssh/id_rsa
-          echo '${{ secrets.PRIVATE_KEY }}' >> ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-
-      - name: run ansible playbook
-        working-directory: benchmarking
-        run: ansible-playbook script.yml -i inventory.ini
-
-  evaluate:
-    name: "Evaluate and Plot"
-    needs:
-      - run-benchmark
-    environment: production
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/download-artifact@master
-        with:
-          name: my-artifact
-          path: /tmp
-
-      # Move Public Key for current User
-      - name: Create Public Key
-        run: |
-          mkdir ~/.ssh
-          touch ~/.ssh/id_rsa
-          echo '${{ secrets.PRIVATE_KEY }}' > ~/.ssh/id_rsa
-
-      # Checkout the repository to the GitHub Actions runner
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.x"
-
-      - name: Install dependencies
-        working-directory: ./benchmarking
-        run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install -r requirements.txt
-
-      - run: |
-          cd ~/.ssh
-          pwd
-
-      - name: Set env
-        run: echo "MONGODB_IP=$(grep -E 'mongodb' /tmp/inventory.ini |head -1 |grep -Eo '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')" >> $GITHUB_ENV
-
-      - name: Set SSH_KEY Env
-        run: echo "SSH_KEY=$(echo $HOME/.ssh/id_rsa)" >> $GITHUB_ENV
-
-      - name: Execute Script
-        working-directory: ./benchmarking
-        run: |
-          python main.py
-        env:
-          SERVER_USER: "ubuntu" # as defined during terraform provisioning
-
-      - name: Archive Plots
-        uses: actions/upload-artifact@v2
-        with:
-          name: plots
-          path: ./benchmarking/results
-
-  destroy:
-    name: "Destroy Environment"
-    needs:
-      - terraform
-      - evaluate
-    if: always()
-    runs-on: ubuntu-latest
-    environment: production
-
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
-    defaults:
-      run:
-        shell: bash
-
-    steps:
-      # Checkout the repository to the GitHub Actions runner
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - uses: actions/download-artifact@master
-        with:
-          name: my-artifact
-          path: tmp
-
-      # Move Public Key for current User
-      - name: Create Public Key
-        run: |
-          mkdir ~/.ssh
-          touch ~/.ssh/id_rsa.pub
-          echo '${{ secrets.PUBLIC_KEY }}' >> ~/.ssh/id_rsa.pub
-
-      - run: ls -la  tmp
-
-      - run: rm -rf tmp/.terraform
-
-      - name: terraform init
-        working-directory: tmp
-        run: terraform init
-
-      - run: ls -la tmp
-
-      - name: destroy cluster state
-        working-directory: tmp
-        run: terraform destroy -var-file tfvars.json -auto-approve
+  # mongodb:
+  #   name: "Install MongoDB"
+  #   needs: terraform
+  #   runs-on: ubuntu-latest
+  #   environment: production
+
+  #   # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+  #   defaults:
+  #     run:
+  #       shell: bash
+
+  #   steps:
+  #     # Checkout the repository to the GitHub Actions runner
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+
+  #     - uses: actions/download-artifact@master
+  #       with:
+  #         name: my-artifact
+  #         path: tmp
+
+  #     - run: cat tmp/inventory.ini
+
+  #     - name: create file with ssh key
+  #       run: |
+  #         mkdir ~/.ssh
+  #         touch ~/.ssh/id_rsa
+  #         echo '${{ secrets.PRIVATE_KEY }}' >> ~/.ssh/id_rsa
+  #         chmod 600 ~/.ssh/id_rsa
+
+  #     - run: ansible-galaxy install undergreen.mongodb
+
+  #     - name: run ansible playbook
+  #       working-directory: ./benchmarking
+  #       run: ansible-playbook install_mongodb.yml -i ../tmp/inventory.ini
+
+  # mikrok8s:
+  #   name: "Install MicroK8s"
+  #   needs: terraform
+  #   runs-on: ubuntu-latest
+  #   environment: production
+
+  #   # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+  #   defaults:
+  #     run:
+  #       shell: bash
+
+  #   steps:
+  #     # Checkout the repository to the GitHub Actions runner
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+
+  #     - uses: actions/download-artifact@master
+  #       with:
+  #         name: my-artifact
+  #         path: tmp
+
+  #     - run: cp tmp/inventory.ini install-scripts/microk8s/ansible/
+
+  #     - run: cat tmp/inventory.ini
+
+  #     - name: create file with ssh key
+  #       run: |
+  #         mkdir ~/.ssh
+  #         touch ~/.ssh/id_rsa
+  #         echo '${{ secrets.PRIVATE_KEY }}' >> ~/.ssh/id_rsa
+  #         chmod 600 ~/.ssh/id_rsa
+
+  #     - name: run ansible playbook
+  #       working-directory: install-scripts/microk8s/ansible
+  #       run: ansible-playbook cluster_install.yml -i inventory.ini
+
+  # k3s:
+  #   name: "Install k3s"
+  #   needs: terraform
+  #   runs-on: ubuntu-latest
+  #   environment: production
+
+  #   # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+  #   defaults:
+  #     run:
+  #       shell: bash
+
+  #   steps:
+  #     # Checkout the repository to the GitHub Actions runner
+  #     - uses: actions/checkout@v2
+
+  #     - uses: actions/download-artifact@master
+  #       with:
+  #         name: my-artifact
+  #         path: tmp
+
+  #     - run: ls
+
+  #     - run: cat tmp/inventory.ini
+
+  #     - run: cp tmp/inventory.ini install-scripts/k3s-ansible/inventory/sample
+
+  #     - run: ls install-scripts/k3s-ansible/inventory/sample
+
+  #     - name: create file with ssh key
+  #       run: |
+  #         mkdir ~/.ssh
+  #         touch ~/.ssh/id_rsa
+  #         echo '${{ secrets.PRIVATE_KEY }}' >> ~/.ssh/id_rsa
+  #         chmod 600 ~/.ssh/id_rsa
+
+  #     - run: ls install-scripts/k3s-ansible
+
+  #     - name: run ansible playbook
+  #       working-directory: install-scripts/k3s-ansible
+  #       run: ansible-playbook -i inventory/sample/inventory.ini site.yml
+
+  # deploy-applications-k3s:
+  #   name: "Deploy Applications k3s"
+  #   needs:
+  #     - k3s
+  #   runs-on: ubuntu-latest
+  #   environment: production
+
+  #   # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+  #   defaults:
+  #     run:
+  #       shell: bash
+
+  #   steps:
+  #     # Checkout the repository to the GitHub Actions runner
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+
+  #     - uses: actions/download-artifact@master
+  #       with:
+  #         name: my-artifact
+  #         path: tmp
+
+  #     - run: cp tmp/inventory.ini install-scripts/k3s-ansible/
+
+  #     - run: cat install-scripts/k3s-ansible/inventory.ini
+
+  #     - name: create file with ssh key
+  #       run: |
+  #         mkdir ~/.ssh
+  #         touch ~/.ssh/id_rsa
+  #         echo '${{ secrets.PRIVATE_KEY }}' >> ~/.ssh/id_rsa
+  #         chmod 600 ~/.ssh/id_rsa
+
+  #     - name: run ansible playbook
+  #       working-directory: install-scripts/k3s-ansible/
+  #       run: ansible-playbook apply_applications.yml -i inventory.ini
+
+  # deploy-applications-microk8s:
+  #   name: "Deploy Applications Microk8s"
+  #   needs:
+  #     - mikrok8s
+  #   runs-on: ubuntu-latest
+  #   environment: production
+
+  #   # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+  #   defaults:
+  #     run:
+  #       shell: bash
+
+  #   steps:
+  #     # Checkout the repository to the GitHub Actions runner
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+
+  #     - uses: actions/download-artifact@master
+  #       with:
+  #         name: my-artifact
+  #         path: tmp
+
+  #     - run: cp tmp/inventory.ini install-scripts/microk8s/ansible/
+
+  #     - run: cat tmp/inventory.ini
+
+  #     - name: create file with ssh key
+  #       run: |
+  #         mkdir ~/.ssh
+  #         touch ~/.ssh/id_rsa
+  #         echo '${{ secrets.PRIVATE_KEY }}' >> ~/.ssh/id_rsa
+  #         chmod 600 ~/.ssh/id_rsa
+
+  #     - name: run ansible playbook
+  #       working-directory: install-scripts/microk8s/ansible
+  #       run: ansible-playbook apply_applications.yml -i inventory.ini
+
+  # run-benchmark:
+  #   name: "Benchmark"
+  #   needs:
+  #     - deploy-applications-k3s
+  #     - deploy-applications-microk8s
+  #     - mongodb
+  #   runs-on: ubuntu-latest
+  #   environment: production
+
+  #   # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+  #   defaults:
+  #     run:
+  #       shell: bash
+
+  #   steps:
+  #     # Checkout the repository to the GitHub Actions runner
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+
+  #     - uses: actions/download-artifact@master
+  #       with:
+  #         name: my-artifact
+  #         path: tmp
+
+  #     - run: cp tmp/inventory.ini benchmarking/
+
+  #     - run: cat tmp/inventory.ini
+
+  #     - name: create file with ssh key
+  #       run: |
+  #         mkdir ~/.ssh
+  #         touch ~/.ssh/id_rsa
+  #         echo '${{ secrets.PRIVATE_KEY }}' >> ~/.ssh/id_rsa
+  #         chmod 600 ~/.ssh/id_rsa
+
+  #     - name: run ansible playbook
+  #       working-directory: benchmarking
+  #       run: ansible-playbook script.yml -i inventory.ini
+
+  # evaluate:
+  #   name: "Evaluate and Plot"
+  #   needs:
+  #     - run-benchmark
+  #   environment: production
+  #   runs-on: ubuntu-latest
+
+  #   steps:
+  #     - uses: actions/download-artifact@master
+  #       with:
+  #         name: my-artifact
+  #         path: /tmp
+
+  #     # Move Public Key for current User
+  #     - name: Create Public Key
+  #       run: |
+  #         mkdir ~/.ssh
+  #         touch ~/.ssh/id_rsa
+  #         echo '${{ secrets.PRIVATE_KEY }}' > ~/.ssh/id_rsa
+
+  #     # Checkout the repository to the GitHub Actions runner
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+
+  #     - name: Set up Python
+  #       uses: actions/setup-python@v2
+  #       with:
+  #         python-version: "3.x"
+
+  #     - name: Install dependencies
+  #       working-directory: ./benchmarking
+  #       run: |
+  #         python -m pip install --upgrade pip setuptools wheel
+  #         pip install -r requirements.txt
+
+  #     - run: |
+  #         cd ~/.ssh
+  #         pwd
+
+  #     - name: Set env
+  #       run: echo "MONGODB_IP=$(grep -E 'mongodb' /tmp/inventory.ini |head -1 |grep -Eo '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')" >> $GITHUB_ENV
+
+  #     - name: Set SSH_KEY Env
+  #       run: echo "SSH_KEY=$(echo $HOME/.ssh/id_rsa)" >> $GITHUB_ENV
+
+  #     - name: Execute Script
+  #       working-directory: ./benchmarking
+  #       run: |
+  #         python main.py
+  #       env:
+  #         SERVER_USER: "ubuntu" # as defined during terraform provisioning
+
+  #     - name: Archive Plots
+  #       uses: actions/upload-artifact@v2
+  #       with:
+  #         name: plots
+  #         path: ./benchmarking/results
+
+  # destroy:
+  #   name: "Destroy Environment"
+  #   needs:
+  #     - terraform
+  #     - evaluate
+  #   if: always()
+  #   runs-on: ubuntu-latest
+  #   environment: production
+
+  #   # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+  #   defaults:
+  #     run:
+  #       shell: bash
+
+  #   steps:
+  #     # Checkout the repository to the GitHub Actions runner
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+
+  #     - uses: actions/download-artifact@master
+  #       with:
+  #         name: my-artifact
+  #         path: tmp
+
+  #     # Move Public Key for current User
+  #     - name: Create Public Key
+  #       run: |
+  #         mkdir ~/.ssh
+  #         touch ~/.ssh/id_rsa.pub
+  #         echo '${{ secrets.PUBLIC_KEY }}' >> ~/.ssh/id_rsa.pub
+
+  #     - run: ls -la  tmp
+
+  #     - run: rm -rf tmp/.terraform
+
+  #     - name: terraform init
+  #       working-directory: tmp
+  #       run: terraform init
+
+  #     - run: ls -la tmp
+
+  #     - name: destroy cluster state
+  #       working-directory: tmp
+  #       run: terraform destroy -var-file tfvars.json -auto-approve
