--- a/.github/workflows/dev-terraform.yaml
+++ b/.github/workflows/dev-terraform.yaml
@@ -46,9 +46,9 @@ name: "DEV Install Edge Orchestrator"
 
 on:
   workflow_dispatch:
-  push:
-    paths:
-      - ".github/workflows/terraform.yml"
+  # push:
+  #   paths:
+  #     - ".github/workflows/terraform.yml"
 
 jobs:
   terraform:
