--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -98,13 +98,10 @@ jobs:
           name: my-artifact
           path: ./
 
-      - run: |
-          test -f terrafrom.tfstate && echo "true"
-
       - name: Move
         run: |
-          test -f terrafrom.tfstate && mv terrafrom.tfstate ./install-scripts/provisioning/
-          test -f terraform.tfstate.backup && mv terraform.tfstate.backup ./install-scripts/provisioning/
+          test -f ./terrafrom.tfstate && mv ./terrafrom.tfstate ./install-scripts/provisioning/
+          test -f ./terraform.tfstate.backup && mv ./terraform.tfstate.backup ./install-scripts/provisioning/
 
       # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
       - name: Terraform Init
