--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -103,8 +103,8 @@ jobs:
       - name: Move
         working-directory: ./install-scripts/provisioning
         run: |
-          test -f ~/terrafrom.tfstate && cp ~/terrafrom.tfstate ./
-          test -f ~/terraform.tfstate.backup && cp ~/terraform.tfstate.backup ./
+          test -f ~/terrafrom.tfstate && cp -f ~/terrafrom.tfstate ./
+          test -f ~/terraform.tfstate.backup && cp -f ~/terraform.tfstate.backup ./
 
       # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
       - name: Terraform Init
