--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -101,13 +101,16 @@ jobs:
       - run: ls -la .
 
       - name: Move
+        continue-on-error: true
         run: |
-          test -f ./terrafrom.tfstate && cp -f ./terrafrom.tfstate ./install-scripts/provisioning/
-          test -f ./terraform.tfstate.backup && cp -f ./terraform.tfstate.backup ./install-scripts/provisioning/
+          cp -f ./terrafrom.tfstate ./install-scripts/provisioning/
+          cp -f ./terraform.tfstate.backup ./install-scripts/provisioning/
       # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
       - name: Terraform Init
         working-directory: ./install-scripts/provisioning
         run: terraform init
+
+      - run: cat ./install-scripts/provisioning/terraform.tfstate
 
       - name: Terraform Apply
         working-directory: ./install-scripts/provisioning
