include scaling of applications into benchmarking script

--- a/benchmarking/ansible.cfg
+++ b/benchmarking/ansible.cfg
@@ -1,2 +1,6 @@
 [defaults]
+nocows = True
+pipelining = True
 host_key_checking = False
+deprecation_warnings = False
+callback_whitelist = profile_tasks
