--- a/benchmarking/script.yml
+++ b/benchmarking/script.yml
@@ -66,7 +66,7 @@
     debug: 
       msg: "{{ cat_output.stdout_lines }}"
 
-- hosts: k3s-master
+- hosts: k3s-master, microk8s-master
   tasks:
   - name: scale application
     become: yes
