--- a/install-scripts/openyurt/hosts.ini
+++ b/install-scripts/openyurt/hosts.ini
@@ -1,14 +1,20 @@
 [all:vars]
 ansible_connection=ssh
 ansible_user=root
+ansible_ssh_private_key_file=~/.ssh/id_rsa
 
-[master]
-master01 ansible_host=65.21.190.155
+[cloud]
+openyurt-master ansible_host=65.21.185.77
 
-[worker]
-worker01 ansible_host=65.21.190.170
+[edge]
+openyurt-worker-0 ansible_host=65.21.188.5
 
-[worker:vars]
-kubernetes_role=node
-[master:vars]
+[openyurt]
+openyurt-master ansible_host=65.21.185.77
+openyurt-worker-0 ansible_host=65.21.188.5
+
+[cloud:vars]
 kubernetes_role=master
+
+[edge:vars]
+kubernetes_role=edge
