--- a/install-scripts/openyurt/group_vars/all.yaml
+++ b/install-scripts/openyurt/group_vars/all.yaml
@@ -1,5 +1,5 @@
 kubernetes_version: 1.16.15-00
 pod_network_cidr: "192.168.0.0/16"
 token: b0f7b8.8d1767876297d69c
-master_ip: "{{ hostvars['openyurt']['ansible_default_ipv4']['address']}}"
+master_ip: "{{ hostvars['openyurt-master']['ansible_default_ipv4']['address']}}"
 kubeadmin_config: /etc/kubernetes/admin.conf
