--- a/install-scripts/openyurt/roles/cni/tasks/main.yml
+++ b/install-scripts/openyurt/roles/cni/tasks/main.yml
@@ -1,6 +1,7 @@
 # Deploy Components for CNI
 
 - name: Install the Tigera Calico operator and custom resource definitions
+  become: no
   command: |
     kubectl apply -f https://docs.projectcalico.org/manifests/tigera-operator.yaml
   register: create_result
@@ -9,6 +10,7 @@
   delay: 2
   ignore_errors: true
 - name: Install Calico by creating the necessary custom resource
+  become: no
   command: |
     kubectl apply -f https://docs.projectcalico.org/manifests/custom-resources.yaml
   register: create_result
@@ -17,6 +19,7 @@
   delay: 2
   ignore_errors: true
 - name: Wait for calico pods become ready
+  become: no
   shell: "kubectl wait --namespace=calico-system --for=condition=Ready pods --timeout=600s --all"
   register: control_plane_pods_ready
   until: control_plane_pods_ready.rc == 0
