--- a/install-scripts/k3s-ansible/apply_applications.yml
+++ b/install-scripts/k3s-ansible/apply_applications.yml
@@ -3,9 +3,9 @@
     - name: label Nodes for scheduling
       become: yes
       shell: |
-        kubectl label nodes k3s-master node=cloud
-        kubectl label nodes k3s-worker-0 node=edge1
-        kubectl label nodes k3s-worker-1 node=edge2
+        kubectl label nodes k3s-master node=cloud --overwrite
+        kubectl label nodes k3s-worker-0 node=edge1 --overwrite
+        kubectl label nodes k3s-worker-1 node=edge2 --overwrite
     - name: install git
       become: true
       apt:
